[gd_scene load_steps=16 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://art/player.png" type="Texture" id=2]
[ext_resource path="res://art/beam_frames/laser1.png" type="Texture" id=3]
[ext_resource path="res://art/beam_frames/laser2.png" type="Texture" id=4]
[ext_resource path="res://art/beam_frames/laser3.png" type="Texture" id=5]
[ext_resource path="res://art/beam_frames/laser4.png" type="Texture" id=6]
[ext_resource path="res://art/beam_frames/laser5.png" type="Texture" id=7]
[ext_resource path="res://art/beam_frames/laser6.png" type="Texture" id=8]
[ext_resource path="res://art/beam_frames/laser7.png" type="Texture" id=9]
[ext_resource path="res://charybdis.regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://sfx/jump.wav" type="AudioStream" id=11]
[ext_resource path="res://sfx/dead.wav" type="AudioStream" id=12]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 8, 8 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": false,
"name": "dead",
"speed": 30.0
} ]

[sub_resource type="DynamicFont" id=3]

size = 16
use_mipmaps = false
use_filter = false
font_data = ExtResource( 10 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Player" type="KinematicBody2D" groups=[
"players",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
invuln = false
float_enable = false

[node name="Sprite" type="Sprite" parent="." index="0"]

visible = false
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="2"]

frames = SubResource( 2 )
animation = "dead"

[node name="Timer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="Jumptimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = false

[node name="scorelabel" type="Label" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -8.0
margin_top = -8.0
margin_right = 9.0
margin_bottom = 8.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="jump_sfx" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 11 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="dead_sfx" type="AudioStreamPlayer" parent="." index="7"]

stream = ExtResource( 12 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="Jumptimer" to="." method="_on_Jumptimer_timeout"]

[connection signal="finished" from="dead_sfx" to="." method="_on_dead_sfx_finished"]


